# yadb_serv

./: .travis.yml  README.md  serv.sln
serv/: .gitignore  CMakeLists.txt  main-cli.cpp  main-serv.cpp  serv.vcxproj  serv.vcxproj.filters
serv/src/: common.hpp  fde.cpp  fde.hpp  serv.cpp  serv.hpp
serv/test/: CMakeLists.txt  serv_test.cpp
